# fegg

./: .gitignore  main.py  pyproject.toml  test_executor.py
bashtools/: __init__.py  async_executor.py
docs/: hosting_plan.md  implementation_steps.md
e2b_sandbox/: backends.py  sandbox.py
e2b_sandbox/e2b-template/: e2b.Dockerfile  e2b.toml
e2b_sandbox/e2b-template/template/: package.json  vite.config.ts
frontend_agent/: __init__.py  agent.py  agent_e2b.py  prompts.py  prompts_e2b.py
frontend_agent/template/react-vite-shadcn-ui/: package.json  pnpm-lock.yaml  (+1 more)
fstools/: __init__.py  backend_tools.py  edit.py  fs.py  tools.py
gittools/: __init__.py  git_ops.py
repomind/: __init__.py  client.py
server/: pyproject.toml  test_executor.py  test_mock_agent.py
server/agent/: agent.py  agent_e2b.py  prompts.py
server/agent/template/react-vite-shadcn-ui/: package-lock.json
server/agent/workspace/: package-lock.json  package.json  vite.config.ts
server/agent/workspace/src/: App.tsx
server/agent/workspace/src/components/: Contact.tsx  Hero.tsx  Navigation.tsx  Projects.tsx  Skills.tsx
server/api/: auth.py  config.py  database.py  dependencies.py  fegg.db  main.py  models.py
server/api/routers/: agent.py  auth.py  sessions.py
server/api/services/: agent_runner.py  sandbox_manager.py
server/sandbox/: __init__.py  backends.py  sandbox.py
server/tools/: __init__.py  async_executor.py  backend_tools.py  client.py  edit.py  fs.py  git_ops.py
templates/react-vite-shadcn-ui/: e2b.Dockerfile  e2b.toml  package.json  vite.config.ts
web/: package.json
(+24 files in other folders)
